--- a/assetequipment.html
+++ b/assetequipment.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asset-Equipment Custody Standard Operating Procedure</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 
     <!-- Bootstrap Icons Link -->
     <link
